--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,22 @@ p {
     width: 100%; height: 100vh;
     background: #abc;
     background-image: url(../img/bg.0.jpg);
+    background-position: center;
+    background-size: cover;
     z-index: 30;
 }
 #main_visual > .bg0_title {
     position: absolute;
-    left: 50%; top: 50%;
-    transform: translateX(-50%); transform: translateY(-50%);
+    width: 100%;
+    top: 50%; transform: translateY(-50%);
+    text-align: center;
+    /* left: 50%; top: 50%;
+    transform: translateX(-50%); transform: translateY(-50%); */
     /* outline: 2px solid red; */
 }
 #main_visual > .bg0_title > h1 {
     font-family: 'Merriweather Sans', sans-serif;
-    font-size: 36px;
+    font-size: 48px;
     color: #fff;
     padding: 10px 0;
 }
@@ -144,18 +149,49 @@ p {
     height: 65px;
     top: 97px; left: 30px;
 }
-.ability_ctn .photoshop > p > span {
-    float: right;
-    color: #e6ab46;
-}
 .ability_ctn .photoshop .gauge_1 {
     width: 500px; height: 20px;
     background: #ccc;
     margin-top: 15px;
 }
-.ability_ctn .photoshop .gauge_1 > .ani_1 {
+.gauge_1 > .ani_1 {
+    /* position: relative; */
     width: 400px; height: 20px;
+    /* top: 45%;
+    top: -webkit-calc(50% - 10px);
+    top: calc(50% - 10px);
+    left: 0; */
+    /* left: -webkit-calc(50% - 75px);
+    left: calc(50% - 75px); */
+    /* background: #e6ab46; */
+}
+
+/* animation 1 */
+.gauge_1 > .ani_1 {
+    position: absolute;
     background: #e6ab46;
+    height: 20px; width: 0;
+    z-index: 0;
+    opacity: 1;
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+}
+.gauge_1 > .ani_1.play {
+    -webkit-animation: ani_1 1s ease-in-out;
+    animation: ani_1 1s ease-in-out;
+    animation-fill-mode: forwards;
+}
+/* @-webkit-keyframes ani_1 {
+    0%{width: 0;}
+    70%{width: 75%; opacity: 1;}
+    90%{opacity: 1; width: 75%;}
+    100%{opacity: 1; width: 75%;}
+} */
+@keyframes ani_1 {
+    0%{width: 0;}
+    70%{width: 75%; opacity: 1;}
+    90%{opacity: 1; width: 75%;}
+    100%{opacity: 1;width: 75%;}
 }
 .ability_ctn .html_css {
     position: absolute;
@@ -164,18 +200,35 @@ p {
     height: 65px;
     top: 97px; left: 670px;
 }
-.ability_ctn .html_css > p > span {
-    float: right;
-    color: #e6ab46;
-}
 .ability_ctn .html_css .gauge_2 {
     width: 500px; height: 20px;
     background: #ccc;
     margin-top: 15px;
 }
-.ability_ctn .html_css .gauge_2 > .ani_2 {
+.gauge_2 > .ani_2 {
     width: 320px; height: 20px;
+}
+
+/* animation 2 */
+.gauge_2 > .ani_2 {
+    position: absolute;
     background: #e6ab46;
+    height: 20px; width: 0;
+    z-index: 0;
+    opacity: 1;
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+}
+.gauge_2 > .ani_2.play {
+    -webkit-animation: ani_2 1s ease-in-out;
+    animation: ani_2 1s ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes ani_2 {
+    0%{width: 0;}
+    70%{width: 60%; opacity: 1;}
+    90%{opacity: 1; width: 60%;}
+    100%{opacity: 1;width: 60%;}
 }
 .ability_ctn .illust {
     position: absolute;
@@ -184,18 +237,34 @@ p {
     height: 65px;
     top: 197px; left: 30px;
 }
-.ability_ctn .illust > p > span {
-    float: right;
-    color: #e6ab46;
-}
 .ability_ctn .illust .gauge_3 {
     width: 500px; height: 20px;
     background: #ccc;
     margin-top: 15px;
 }
-.ability_ctn .illust .gauge_3 > .ani_3 {
+.gauge_3 > .ani_3 {
     width: 370px; height: 20px;
+}
+/* animation 3 */
+.gauge_3 > .ani_3 {
+    position: absolute;
     background: #e6ab46;
+    height: 20px; width: 0;
+    z-index: 0;
+    opacity: 1;
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+}
+.gauge_3 > .ani_3.play {
+    -webkit-animation: ani_3 1s ease-in-out;
+    animation: ani_3 1s ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes ani_3 {
+    0%{width: 0;}
+    70%{width: 70%; opacity: 1;}
+    90%{opacity: 1; width: 70%;}
+    100%{opacity: 1;width: 70%;}
 }
 .ability_ctn .java {
     position: absolute;
@@ -204,20 +273,35 @@ p {
     height: 65px;
     top: 197px; left: 670px;
 }
-.ability_ctn .java > p > span {
-    float: right;
-    color: #e6ab46;
-}
 .ability_ctn .java .gauge_4 {
     width: 500px; height: 20px;
     background: #ccc;
     margin-top: 15px;
 }
-.ability_ctn .java .gauge_4 > .ani_4 {
+.gauge_4 > .ani_4 {
     width: 220px; height: 20px;
-    background: #e6ab46;
 }
-
+/* animation 4 */
+.gauge_4 > .ani_4 {
+    position: absolute;
+    background: #e6ab46;
+    height: 20px; width: 0;
+    z-index: 0;
+    opacity: 1;
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+}
+.gauge_4 > .ani_4.play {
+    -webkit-animation: ani_4 1s ease-in-out;
+    animation: ani_4 1s ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes ani_4 {
+    0%{width: 0;}
+    70%{width: 40%; opacity: 1;}
+    90%{opacity: 1; width: 40%;}
+    100%{opacity: 1;width: 40%;}
+}
 /* works */
 #works {
     position: relative;
@@ -284,14 +368,19 @@ p {
 #contact {
     position: relative;
     top: 350px;
-    width: 1200px; height: 300px;
+    width: 100%; height: 300px;
     margin: 0 auto;
     background: #000;
     color: #fff;
 }
-#contact > .contact_ctn > .l_contact_cts {
+#contact > .contact_ctn {
     position: absolute;
-    top: 100px; left: 100px;
+    width: 1200px;
+    left: 50%; transform: translateX(-50%);
+}
+.contact_ctn > .l_contact_cts {
+    position: absolute;
+    top: 100px; left: 0;
 }
 .l_contact_cts > h1 {
     font-family: 'Merriweather Sans', sans-serif;
@@ -299,12 +388,13 @@ p {
     font-size: 40px;
     padding: 10px 0;
 }
-#contact > .contact_ctn > .r_contact_cts  {
+.contact_ctn > .r_contact_cts  {
     position: absolute;
-    top: 150px; right: 10px;
+    top: 120px; right: 0;
 }
 .r_contact_cts > p {
     font-family: 'Merriweather Sans', sans-serif;
     font-weight: 400;
     font-size: 16px;
+    padding: 10px 0;
 }
