--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,9 @@ p {
     z-index: 30;
 }
 #main_visual > .bg0_title {
-    position: absolute;
-    width: 100%;
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
     top: 50%; transform: translateY(-50%);
     text-align: center;
     /* left: 50%; top: 50%;
@@ -50,7 +51,7 @@ p {
 
 /* main header */
 #main_header {
-    position: relative;
+    position: fixed;
     width: 1200px; height: 35px;
     left: 100px;
     top: 30px;
@@ -82,6 +83,7 @@ p {
 }
 #main_header .menu > .depth1 > li > a {
     color: #fff;
+    cursor: pointer;
 }
 
 /* about me */
@@ -114,6 +116,8 @@ p {
     width: 524px; height: 640px;
     background: #ccc;
     background-image: url(../img/about_me.jpg);
+    background-size: cover;
+    background-position: center;
     /* outline: 2px solid red; */
     top: 150px;
     left: 600px;
@@ -374,9 +378,10 @@ p {
     color: #fff;
 }
 #contact > .contact_ctn {
-    position: absolute;
+    position: relative;
     width: 1200px;
-    left: 50%; transform: translateX(-50%);
+    margin: 0 auto;
+    /* left: 50%; transform: translateX(-50%); */
 }
 .contact_ctn > .l_contact_cts {
     position: absolute;
