--- a/css/style.css
+++ b/css/style.css
@@ -334,23 +334,30 @@ p {
     background: #000;
 }
 /* .works_menu1 */
-.works_ctn .works_menu1 {
+
+/* b.works_ctn .works_menu1 {
     position: absolute;
     left: 50%; transform: translateX(-50%);
     text-align: center;
     top: 60px;
+} */
+.container > nav {
+    position: absolute;
+    left: 50%; transform: translateX(-50%);
+    top: 70px;
 }
-.works_ctn .works_menu1 li {
+.container > nav  li {
     display: inline;
     font-family: 'Merriweather Sans', sans-serif;
+    /* outline: 2px solid red; */
 }
-.works_ctn .works_menu1 li:not(:last-child) {
+.works_ctn #tab-1 li:not(:last-child) {
     margin-right: 10px;
 }
-.works_ctn .works_menu1 li > a {
+.works_ctn #tab-1 li > a {
     color: #000;
 }
-.works_menu1 > nav li > a:hover {
+#tab-1 > nav li > a:hover {
     color: #e6ab46;
 }
 /* works contents */
